apps/nextjs/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs
spec:
  selector:
    app: nextjs
  ports:
    - port: 80
      targetPort: 3000
